2010-12-04  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug that caused an error if you had a crafting rule that doesn't include a bonus.

2010-12-04  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 45 - Fixed a bug that caused the crafting window to craft if you turn off all of the deciders.
- Fixed an issue where the crafting window would crash if GetTradeSkillReagentItemLink() failed to return a link. This happened with my Wild Turkey

2010-11-29  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug where your equipped items were not counted as items in your inventory. If you replaced an equipped item and one of them had a cost associated, it would transfer the value between the two.

2010-10-18  Asa Ayers  <Asa.Ayers@Gmail.com>

- Removed some debugging code that caused characters on your own account to use the cross-account mail.
- Addes support GnomeWorks and ATSW queues.

2010-10-16  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed references to 'this' which Blizzard removed in 4.0.1

2010-10-13  Asa Ayers  <Asa.Ayers@Gmail.com>

- Better solution for item links.
- Updated TOC so it isn't considered out of date.

2010-10-12  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed item links for 4.0.1

2010-10-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 45 - Added the ability suppress COD warnings when mailing to characters on other accounts in Altoholic/DataStore. Instead of sending COD, ItemAuditor will send tracking info in the message. Thanks to Zerotorescue for giving me the solution to detect whether or not Postal or MailOpener is processing. It was the last step holding this back from being released.

2010-10-06  Asa Ayers  <Asa.Ayers@Gmail.com>

- Ticket 46 - Added DataStore_Characters to the list of dependencies. It should have been added with Ticket 43.

2010-10-02  Asa Ayers  <Asa.Ayers@Gmail.com>
